# BoTSORT-cpp

./: .gitignore  CMakeLists.txt  apt_dependencies.txt  tests.py
botsort/: CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.py
botsort/botsort/: __init__.py  config.py  tracker.py
botsort/csrc/: GlobalMotionCompensation.cpp  GmcParams.cpp  KalmanFilter.cpp  KalmanFilterAccBased.cpp  TrackerParams.cpp  botsort.cpp  lapjv.cpp  matching.cpp  track.cpp  utils.cpp
botsort/csrc/include/: DataType.h  GlobalMotionCompensation.h  GmcParams.h  KalmanFilter.h  TrackerParams.h  botsort.h  matching.h  track.h
